--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 }
 .header-container {
     background-color: rgb(356, 100, 66);
@@ -18,6 +19,7 @@ body {
     position: relative;
     color: white;
     height: 300px;
+    border-bottom-left-radius: 50px;
 }
 .main-nav {
     display: flex;
@@ -30,18 +32,40 @@ body {
     /* justify-content: center; */
     /* align-items: center; */
 }
+.modern p {
+    color: inherit;
+}
 .dropbtn {
     color: white;
+    display: inline-block;
 }
 
 .dropdown-content {
     display:none ;
-    flex-direction: column;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+    /* flex-direction: column; */
     background-color: white;
-    color: black;
+    /* color: black; */
     
 }
 
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }  
+
+  .dropdown-content a:hover {
+      background-color: lightgray;
+}
 .nav-container {
     display: flex;
     justify-content: space-between;
@@ -93,12 +117,10 @@ h2 {
     padding: 40px  60px;
     
 }
-img {
-    object-fit:;
-}
+
 
 .body2-container {
-    background-color: rgb(61, 60, 60);
+    background-color: rgb(32, 26, 58);
     color: white;
     position: relative;
     height: 240px;
@@ -107,6 +129,13 @@ img {
     border-bottom-left-radius: 50px;
     border-top-right-radius: 50px;
 }
+.body2-container h3 {
+    color: white;
+}
+.body2-container p {
+    color: white;
+}
+
 .phones {
     position: absolute;
     top: -50px;
@@ -120,7 +149,6 @@ img {
     
 }
 .body3-container {
-    border: 2px solid black;
     display: flex;
     position: relative;
     height: 500px;
@@ -141,14 +169,20 @@ footer {
    
 }
 .footer-container {
-    padding: 40px 150px 40px 80px;
+    padding: 40px 250px 40px 150px;
     display: flex;
     justify-content: space-between;
 }
 li {
     list-style: none;
+    color: aqua;
+    cursor: pointer;
 }
 a {
     /* color: white; */
     text-decoration: none;
+}
+h2, h3, p {
+    color: rgb(45, 45, 94);
+    line-height: 25px;
 }
